--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root{
-    --fundo:#483D8B;
+    --fundo:#E6E6FA;
     --cartao-frente:#836FFF;
     --cartao-verso:#6959CD;
     --destaque: rgb(153, 0, 255);
