--- a/style.css
+++ b/style.css
@@ -47,3 +47,10 @@ margin: 0.5rem;
 border-radius: 0.6rem;
 font-size: 1vw;
 }
+
+.conteudo-cartao p{
+    margin-top: 4rem;
+    font-size: 1.4vw;
+    padding: 2rem;
+    
+}
