--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
     --fundo:#E6E6FA;
-    --cartao-frente:#d17df8;
-    --cartao-verso:#a033d3;
+    --cartao-frente:#db9ff7;
+    --cartao-verso:#8a19d4;
     --destaque: rgb(168, 95, 190);
     --preto:#000000;
     --branco:#ffffff;
