--- a/style.css
+++ b/style.css
@@ -78,4 +78,7 @@ font-weight: 500;
 }
 .pergunta-cartao, .resposta-cartao{
 backface-visibility: hidden;
+position: absolute;
+height: 100%;
+width: 100%;
 }
