--- a/style.css
+++ b/style.css
@@ -71,7 +71,9 @@ font-weight: 500;
 .resposta-cartao{
     color:var(--destaque);
     font-weight: 700;
+    transform: rotateY(180deg);
 }
+
 
 .cartao:hover .conteudo-cartao {
  transform: rotateY(180deg);
