--- a/style.css
+++ b/style.css
@@ -72,6 +72,8 @@ font-weight: 500;
     color:var(--destaque);
     font-weight: 700;
     transform: rotateY(180deg);
+    background-color: var(--cartao-verso);
+    border: 2px solid var(--destaque);
 }
 
 
