--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
     --fundo:#E6E6FA;
     --cartao-frente:#c59ff7;
-    --cartao-verso:#7019d4;
+    --cartao-verso:#a76fe7;
     --destaque: rgb(152, 95, 190);
     --preto:#000000;
     --branco:#ffffff;
