--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ font-weight: 500;
 }
 
 
-.cartao:hover .conteudo-cartao {
+.cartao.active .conteudo-cartao {
  transform: rotateY(180deg);
 }
 .pergunta-cartao, .resposta-cartao{
