--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root{
     --fundo:#E6E6FA;
     --cartao-frente:#c59ff7;
-    --cartao-verso:#a76fe7;
-    --destaque: rgb(208, 176, 230);
+    --cartao-verso:#d1b2f5;
+    --destaque: rgb(137, 48, 211);
     --preto:#000000;
     --branco:#ffffff;
 }
