--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
     --fundo:#E6E6FA;
     --cartao-frente:#c59ff7;
-    --cartao-verso:#dbc8fa;
+    --cartao-verso:#d6c6fc;
     --destaque: rgb(137, 48, 211);
     --preto:#000000;
     --branco:#ffffff;
