--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
     --fundo:#E6E6FA;
     --cartao-frente:#c6a1f7;
-    --cartao-verso:#af8efd;
+    --cartao-verso:#bb96f7;
     --destaque: #8930d3;
     --preto:#000000;
     --branco:#ffffff;
