--- a/pagina2.css
+++ b/pagina2.css
@@ -49,3 +49,7 @@ footer{
     padding: 40px;
     background-color: var(--cartao-verso);
 }
+
+.conteudo-cartao: :hover{
+transform: scale(1,04);
+}
