--- a/pagina2.css
+++ b/pagina2.css
@@ -42,7 +42,8 @@ footer{
     padding: 40px;
     background-color: var(--cartao-frente);
     color: var(--branco);
-    box-sizing: 8px 8px 25px var(--preto);
+    box-shadow: 8px 8px 25px var(--preto);
+    cursor: pointer;
 }
 
 .resposta-cartao{
