--- a/pagina2.css
+++ b/pagina2.css
@@ -49,6 +49,7 @@ footer{
 .resposta-cartao{
     padding: 40px;
     background-color: var(--cartao-verso);
+    display: none;
 }
 
 .conteudo-cartao: :hover{
